--- a/중간고사/4주차.md
+++ b/중간고사/4주차.md
@@ -2,10 +2,11 @@
 
 ```c
 #include <stdio.h>
+#define _CRT_SECURE_NO_WARNINGS
 
 int main(void)
 {
-    int item, money, cheon, obaek, baek, a;
+    int item, money, cheon, obaek, baek, charge;
 
     printf("물건 값을 입력하시오: ");
     scanf("%d", &item);
@@ -14,17 +15,17 @@ int main(void)
     scanf("%d", &money);
     
     printf("거스름돈은 다음과 같습니다.\n");
-    a = money - item; //거스름돈
+    charge = money - item; //거스름돈
 
-    cheon = a / 1000; //천원짜리
-    a %= 1000;// 나머지 돈
+    cheon = charge / 1000; //천원짜리
+    charge %= 1000;// 나머지 돈
     printf("천원권: %d장\n", cheon);
 
-    obaek = a / 500; //오백원짜리
-    a %= 500; //나머지돈
+    obaek = charge / 500; //오백원짜리
+    charge %= 500; //나머지돈
     printf("오백원 동전: %d개\n", obaek);
 
-    baek = a / 100; //백원짜리
+    baek = charge / 100; //백원짜리
     printf("백원 동전: %d개\n", baek);
 
     return 0;
