--- a/프로그래밍11주차 과제/자동차경주.md
+++ b/프로그래밍11주차 과제/자동차경주.md
@@ -23,7 +23,7 @@ int main(void){
     return 0;
 }
 
-void disp_car(int car_number, int distance){ //void 는 리턴값이 필요 없다.
+void disp_car(int car_number, int distance){ //리턴 값이 필요가 없어 void를 사용한다.
     printf("CAR #%d:", car_number); //받은 car를 구분하기 위해 1, 2를 출력
     for(int i = 1; i <= distance/10; i++){ //자동차의 저장된 난수 만큼 *을 출력
         printf("*");
