--- a/프로그래밍11주차 과제/절대값.md
+++ b/프로그래밍11주차 과제/절대값.md
@@ -6,7 +6,7 @@
 int main(void){
 
     printf("12의 절대값은 %f\n", fabs(12)); 
-    printf("-12의 절대값은 %f\n", fabs(-12)); //fabs() 함수로 괄호 안에 있는 갑을 절대값으로 바꾼다.
+    printf("-12의 절대값은 %f\n", fabs(-12)); //fabs() 함수로 괄호 안에 있는 값을 절대값으로 바꾼다.
 
     return 0;
 } 
