--- a/프로그래밍11주차 과제/삼각함수.md
+++ b/프로그래밍11주차 과제/삼각함수.md
@@ -2,12 +2,12 @@
 ```c
 #include <stdio.h>
 #include <math.h> //수학 함수를 위해 선언
+#define PI 3.1415926535
 
 int main(void){
-    double pi = 3.1415926535;
     double x, y;
 
-    x = pi / 2;
+    x = PI / 2;
     y = sin(x);
     printf("sin(%f) = %f\n", x, y); //사인 함수의 값을 계산하는 함수
 
