--- a/프로그래밍11주차 과제/자동차경주.md
+++ b/프로그래밍11주차 과제/자동차경주.md
@@ -18,7 +18,8 @@ int main(void){
         disp_car(1, car1_dist);
         disp_car(2, car2_dist); //차의 번호와 차의 저장된 난수값을 넣는다.
         printf("------------------------|GOAL\n"); 
-        _getch(); //반복문을 제어하여 콘솔창에서 입력을 받아야 다음으로 넘어간다.
+        _getch(); /*콘솔창에서 키입력을 받아 반환한다.
+       이를 아용해 반복문을 제어해 자동차에 이동과정을 바로바로 나오지 않게 할 수 있다.*/
     }
     return 0;
 }
